ingress/dmh_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domyhomework-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4202, https://domyhomework.ai, https://domyhomework.com, https://www.domyhomework.ai, https://www.domyhomework.com, https://app.domyhomework.ai, https://app.domyhomework.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
    # Preserve real client IP
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "false"
spec:
  tls:
  - hosts:
      - domyhomework.ai
      - domyhomework.com
      - www.domyhomework.ai
      - www.domyhomework.com
      - app.domyhomework.ai
      - app.domyhomework.com
    secretName: dmh-tls
  rules:
  - host: "domyhomework.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-dmh-ssr
            port:
              number: 4000
  - host: "domyhomework.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-dmh-ssr
            port:
              number: 4000
  - host: "www.domyhomework.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-dmh-ssr
            port:
              number: 4000
  - host: "www.domyhomework.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-dmh-ssr
            port:
              number: 4000
  - host: "app.domyhomework.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-helm
            port:
              number: 55000
  - host: "app.domyhomework.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-helm
            port:
              number: 55000
