ingress/lbt_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnbytest-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200, https://storybook.learnbytesting.ai, https://app.learnbytesting.ai, https://learnbytesting.ai"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
spec:
  tls:
  - hosts:
      - webapp.learnbytesting.ai
      - app.learnbytesting.ai
      - storybook.learnbytesting.ai
      - orchestrator.learnbytesting.ai
      - kafka.learnbytesting.ai
      - learnbytesting.ai
      - hypothesize.us
      - www.hypothesize.us
    secretName: lbt-tls
  rules:
  - host: "app.learnbytesting.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-helm
            port:
              number: 55000
  - host: "storybook.learnbytesting.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: storybook-helm
            port:
              number: 64000
  - host: "orchestrator.learnbytesting.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: orchestrator-helm
            port:
              number: 8080
  - host: "kafka.learnbytesting.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: orchnest
            port:
              number: 3700
  - host: "learnbytesting.ai"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-ssr
            port:
              number: 4000
  - host: "hypothesize.us"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-helm
            port:
              number: 55000
  - host: "www.hypothesize.us"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-helm
            port:
              number: 55000
